# level3_cv_finalproject-cv-11

./: .gitignore  README.md  deepfake.sql  main.py  requirements.txt  user_db.sql
MobileFaceSwap/: .gitignore  MobileFaceSwap_colab.ipynb  README.md  image_test.py  사용법
MobileFaceSwap/utils/: prepare_data.py
backend/: .gitignore  README.md  db_setting.py  login_form.html  main.py  main_before.py  pyproject.toml  requirements.txt
backend/routers/: crud.py  database.py  detection.py  file.py  generation.py  generation_file.py  inference.py  model.py  port.py  project.py  schemas.py  user.py  user_db.py  vertex.py
backend/test/: dbtest.py
data/: .gitignore
deepfake/: C_E_ViT.py  datas.py  extract_and_align_faces_image.py  gradcam.py  inference.py  make_synthesis.py  meta_test.py  meta_train.py  models.py  train.py  train_ae.py
deepfake/efficient_net/efficientnet_pytorch/: __init__.py  model.py
docs/: pull_request_template.md
frontend/: .gitignore  README.md  package-lock.json  package.json  server.js
frontend/lib/: sessionOption.js
frontend/src/: all.js
frontend/src/assets/scss/: _variables.scss  style.scss
frontend/src/layouts/: Footer.css  Footer.js  FullLayout.js  Header.js  Logo.js  Sidebar.js
frontend/src/lib/: api.js  store.js
frontend/src/routes/: Router.js
frontend/src/views/: Login.css  Login.js  Register.css  Register.js  Starter.css  Starter.js
frontend/src/views/ui/: Badges.js  (+20 more)
sota_baseline/: README.md
sota_baseline/cross-efficient-vit/: test.py  train.py  utils.py
sota_baseline/cross-efficient-vit/configs/: architecture.yaml
(+23 files in other folders)
